Add services container

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,7 @@
+akka {
+  log-dead-letters-during-shutdown = off
+}
+
 spray.servlet {
   boot-class = "org.danielholmes.coc.baseanalyser.web.WebAppServlet"
 }
