--- a/src/main/webapp/.ebextensions/01_gzip_httpd.config
+++ b/src/main/webapp/.ebextensions/01_gzip_httpd.config
@@ -1,3 +1,5 @@
 container_commands:
   01_gzip_httpd:
     command: "cp .ebextensions/enable_mod_deflate.conf /etc/httpd/conf.d"
+  02_gzip_httpd:
+    command: "/etc/init.d/httpd reload"
